Fixed contrast error

--- a/style.css
+++ b/style.css
@@ -647,11 +647,17 @@ h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn
+ {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+}
+
+a {
+    color: #000;
+    font-family: "helvetica";
+    font-weight: 400;
 }
 
 .container {
@@ -739,6 +745,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black {
+    color: #000!important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -767,7 +777,8 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
-    background-color: #364577;
+    /*background-color: #364577;*/
+    background-color: #000;
 }
 
 .bgc-atomic-tangerine {
@@ -780,12 +791,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #000!important;
 }
 
 .ltc-white {
